--- a/QuestRooms.UI/Views/Shared/_Layout.cshtml
+++ b/QuestRooms.UI/Views/Shared/_Layout.cshtml
@@ -10,16 +10,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 </head>
-<body>
+<body class="bodyDesign">
     <header>
-
+       
     </header>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
         </div>
     </div>
 
-    <div class="container body-content">
+    <div class="container body-content ">
         @RenderBody()
         <hr />
         <footer>
